--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   application:
     name: health
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/shec_psims
@@ -25,7 +24,8 @@ spring:
     resources:
       static-locations: file:C:/image/
 
-
+server:
+    port: 8080
 
 
 mybatis-plus:
