--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
-    name: health
+    name: SHEC-PSIMS
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/shec_psims
@@ -14,23 +15,27 @@ spring:
       database: 0
   servlet:
     multipart:
-          enabled: true
-          max-file-size: 20MB # 设置最大文件大小，例如 10MB
-          max-request-size: 20MB # 设置最大请求大小，例如 10MB
-          location: uploads/ # 设置上传文件的存储目录
+      enabled: true
+      max-file-size: 20MB # 设置最大文件大小，例如 10MB
+      max-request-size: 20MB # 设置最大请求大小，例如 10MB
+      location: uploads/ # 设置上传文件的存储目录
   mvc:
     static-path-pattern: /admin/goods/static/**
   web:
     resources:
       static-locations: file:C:/image/
 
-server:
-    port: 8080
-
-
 mybatis-plus:
+  mapper-locations: classpath*:mapper/**/*.xml
+  type-aliases-package: com.webtab.shecpsims.entity
   configuration:
-    map-underscore-to-camel-case: true
-  type-aliases-package: com.webtab.shecpsims.model.entity
-  mapper-locations: classpath:com.webtab.shecpsims.mapper/*
+    mapUnderscoreToCamelCase: true
+    logImpl: org.apache.ibatis.logging.stdout.StdOutImpl # ?????SQL??
+  global-config:
+    db-config:
+      id-type: auto
 
+logging:
+  level:
+    root: info
+    com.webtab.shecpsims: debug
